# ai-practice

./: README.md  pyproject.toml
data-science-course/Part_1_Intro_to_Data_and_Data_Science/: notes.md
data-science-course/Part_2_Probability/01-Combinatorics/: exercises.md  notes.md
essential-math/notes/: notes-chapter-1.ipynb  notes-chapter-2.ipynb  notes-chapter-3.ipynb
