[tool.poetry]
name = "ai-practice"
version = "0.1.0"
description = "my ai practice :)"
authors = ["guerrero"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = ">1"
sympy = "^1.13.3"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
